[package]
name = "astro-core"
version = "0.1.0"
edition = "2021"
description = "Western numerology and zodiac calculations for Digital Oracle"
license = "MIT"
repository = "https://github.com/YehhiAleksandra/astro-core"
readme = "README.md"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "astro-core"
path = "src/bin/astro-core.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
